--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "node-firebird",
-    "version": "1.1.5",
+    "name": "es-node-firebird",
+    "version": "1.1.6",
     "description": "Pure JavaScript and Asynchronous Firebird client for Node.js.",
     "keywords": [
         "firebird",
@@ -8,10 +8,10 @@
         "rdbms",
         "sql"
     ],
-    "homepage": "https://github.com/hgourvest/node-firebird",
+    "homepage": "https://github.com/Emilsoftware/node-firebird",
     "repository": {
         "type": "git",
-        "url": "https://github.com/hgourvest/node-firebird"
+        "url": "https://github.com/Emilsoftware/node-firebird"
     },
     "author": {
         "name": "Henri Gourvest",
@@ -26,7 +26,7 @@
     "licenses": [
         {
             "type": "MPL-2.0",
-            "url": "https://github.com/hgourvest/node-firebird/blob/master/LICENSE"
+            "url": "https://github.com/Emilsoftware/node-firebird/blob/master/LICENSE"
         }
     ],
     "scripts": {
