--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-    "name": "es-node-firebird",
-    "version": "1.1.6",
-    "description": "Pure JavaScript and Asynchronous Firebird client for Node.js.",
-    "keywords": [
-        "firebird",
-        "database",
-        "rdbms",
-        "sql"
-    ],
-    "homepage": "https://github.com/Emilsoftware/node-firebird",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Emilsoftware/node-firebird"
-    },
-    "author": {
-        "name": "Henri Gourvest",
-        "email": "hgourvest@gmail.com"
-    },
-    "contributors": [
-        "Popa Marius Adrian <mapopa@gmail.com>",
-        "Peter Širka <petersirka@gmail.com>"
-    ],
-    "main": "./lib",
-    "types": "./lib/index.d.ts",
-    "licenses": [
-        {
-            "type": "MPL-2.0",
-            "url": "https://github.com/Emilsoftware/node-firebird/blob/master/LICENSE"
-        }
-    ],
-    "scripts": {
-        "test": "mocha"
-    },
-    "dependencies": {
-        "big-integer": "^1.6.48",
-        "long": "^4.0.0"
-    },
-    "devDependencies": {
-        "coveralls": "^3.0.1",
-        "mocha": "^10.2.0",
-        "nyc": "^15.0.1"
+  "name": "es-node-firebird",
+  "version": "1.1.7",
+  "description": "Pure JavaScript and Asynchronous Firebird client for Node.js.",
+  "keywords": [
+    "firebird",
+    "database",
+    "rdbms",
+    "sql"
+  ],
+  "homepage": "https://github.com/Emilsoftware/node-firebird",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Emilsoftware/node-firebird"
+  },
+  "author": {
+    "name": "Henri Gourvest",
+    "email": "hgourvest@gmail.com"
+  },
+  "contributors": [
+    "mtt382dev <mtt382dev@gmail.com>",
+    "wgrientidev <wgrientidev@gmail.com>"
+  ],
+  "main": "./lib",
+  "types": "./lib/index.d.ts",
+  "licenses": [
+    {
+      "type": "MPL-2.0",
+      "url": "https://github.com/Emilsoftware/node-firebird/blob/master/LICENSE"
     }
+  ],
+  "scripts": {
+    "test": "mocha"
+  },
+  "dependencies": {
+    "big-integer": "^1.6.48",
+    "long": "^4.0.0"
+  },
+  "devDependencies": {
+    "coveralls": "3.1.1",
+    "mocha": "^10.2.0",
+    "nyc": "^15.0.1"
+  }
 }
